Fixed updating pictures causing bad requests, because several properties of the Picture object were null. Fixed AmsifySuggest not showing when the input field is hidden at initializing, it would set the width to 0.

--- a/KinaUnaWeb/wwwroot/css/amsify.suggestags.css
+++ b/KinaUnaWeb/wwwroot/css/amsify.suggestags.css
@@ -62,6 +62,7 @@
     background: white;
     border: 1px solid #dedede;
     z-index: 99;
+    min-width: 100px;
 }
 
     .amsify-suggestags-area
